@@ -4,6 +4,7 @@
   - fix (fsvo) broken URLs (RT#55659)
   - proper exception on erroneous usage of bare catch/finally (RT#81070)
   - proper exception on erroneous use of multiple catch{} blocks
+  - clarify exception occuring on unterminated try block (RT#75712)
 
 0.12
   - doc fixes
